      bug #1334963 Per-server themes - left frame colors unthemed
    * server_privileges.php:
      - bug #1274032 Field privileges with database names containing underscores
      - use DROP USER
      - use db_name LIKE REPLACE( mysql.db.Db, \_, _ )
    * libraries/grab_globals.lib.php: [XSS] clean $_SERVER variables
    * left.php, libraries/common.lib.php: format rowcount in left frame
    
2005-10-26 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/french* updates

2005-10-26 Sebastian Mendel <cybot_tm@users.sourceforge.net>
	* themes/*/theme_right.css.php, libraries/auth/http.auth.lib.php,
	  db_operations.php, mult_submits.inc.php, server_privileges.php,
	  css/phpmyadmin.css.php, libraries/common.lib.php, sql.php,
	  libraries/auth/cookie.auth.lib.php:
	  unified message boxes (error, warning, confirmation)
	* server_privilegs.php: MySQL 5 requires CREATE USER before GRANT
	
2005-10-25 Michal Čihař  <michal@cihar.com>
    * lang/english: "Log in" is correct naming for action (RFE #945440).
    * tbl_properties_operations.php: Allow to change auto_increment for
      InnoDB (bug #1337873).
    * tbl_properties_operations.php: Reread table information after change, so
      that rendered page contains change, that has been just done.

2005-10-24 Michal Čihař  <michal@cihar.com>
    * tbl_properties_operations.php: Fix changing table attributes, reread new
      parameters after changing them (bug #1290413).
    * main.php: Remove useless isset.
    * lang/czech: Update.

2005-10-23 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: there is already a function to do this
      sort (thanks to Sebastian)
    * tbl_change.php: bug #1334627, do not set NOW() as default function
      when the TIMESTAMP has a default value and does not have the
      ON UPDATE CURRENT TIMESTAMP attribute (phew! repeat this 3 times)

2005-10-21 Marc Delisle  <lem9@users.sourceforge.net>